; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/extr_bin2c.c_dumpHex.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/extr_bin2c.c_dumpHex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"\0A{\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"\0A   \00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c" 0x%02x,\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"\0A}\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*, i8)* @dumpHex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @dumpHex(i32* %0, i32* %1, i8 signext %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i64, align 8
  %8 = alloca i8, align 1
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8 %2, i8* %6, align 1
  store i64 0, i64* %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 (i32*, i8*, ...) @fprintf(i32* %9, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %45, %3
  %12 = load i32*, i32** %4, align 8
  %13 = call zeroext i8 @fgetc(i32* %12)
  store i8 %13, i8* %8, align 1
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @feof(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %11
  %18 = load i8, i8* %6, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %17
  store i8 0, i8* %8, align 1
  br label %22

22:                                               ; preds = %21, %17, %11
  %23 = load i32*, i32** %4, align 8
  %24 = call i64 @feof(i32* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %22
  %27 = load i8, i8* %6, align 1
  %28 = sext i8 %27 to i32
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %44

30:                                               ; preds = %26, %22
  %31 = load i64, i64* %7, align 8
  %32 = urem i64 %31, 16
  %33 = icmp eq i64 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %30
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 (i32*, i8*, ...) @fprintf(i32* %35, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  br label %37

37:                                               ; preds = %34, %30
  %38 = load i32*, i32** %5, align 8
  %39 = load i8, i8* %8, align 1
  %40 = zext i8 %39 to i32
  %41 = call i32 (i32*, i8*, ...) @fprintf(i32* %38, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 %40)
  %42 = load i64, i64* %7, align 8
  %43 = add i64 %42, 1
  store i64 %43, i64* %7, align 8
  br label %44

44:                                               ; preds = %37, %26
  br label %45

45:                                               ; preds = %44
  %46 = load i32*, i32** %4, align 8
  %47 = call i64 @feof(i32* %46)
  %48 = icmp ne i64 %47, 0
  %49 = xor i1 %48, true
  br i1 %49, label %11, label %50

50:                                               ; preds = %45
  %51 = load i32*, i32** %5, align 8
  %52 = call i32 (i32*, i8*, ...) @fprintf(i32* %51, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0))
  %53 = load i64, i64* %7, align 8
  ret i64 %53
}

declare dso_local i32 @fprintf(i32*, i8*, ...) #1

declare dso_local zeroext i8 @fgetc(i32*) #1

declare dso_local i64 @feof(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
